--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "type": "module",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1",
+        "test": "NODE_OPTIONS=--experimental-vm-modules npx jest",
         "start": "nodemon server.js"
     },
     "keywords": [],
@@ -17,5 +17,9 @@
         "dotenv": "^16.4.7",
         "express": "^4.21.2",
         "nodemon": "^3.1.9"
+    },
+    "devDependencies": {
+        "jest": "^29.7.0",
+        "supertest": "^7.0.0"
     }
 }
