--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,7 +7,9 @@
         "dev": "vite",
         "build": "vite build",
         "lint": "eslint .",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest",
+        "test:ui": "vitest --ui"
     },
     "dependencies": {
         "@emotion/react": "^11.14.0",
@@ -15,16 +17,21 @@
         "@fontsource/roboto": "^5.1.1",
         "@mui/icons-material": "^6.3.0",
         "@mui/material": "^6.3.0",
+        "@testing-library/jest-dom": "^6.6.3",
+        "@testing-library/react": "^16.1.0",
         "axios": "^1.7.9",
+        "jsdom": "^25.0.1",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
-        "react-router-dom": "^7.1.1"
+        "react-router-dom": "^7.1.1",
+        "vitest": "^2.1.8"
     },
     "devDependencies": {
         "@eslint/js": "^9.17.0",
         "@types/react": "^18.3.18",
         "@types/react-dom": "^18.3.5",
         "@vitejs/plugin-react": "^4.3.4",
+        "@vitest/ui": "^2.1.8",
         "eslint": "^9.17.0",
         "eslint-plugin-react": "^7.37.2",
         "eslint-plugin-react-hooks": "^5.0.0",
